GNOME Bugzilla – Bug 764688
Couple of fixes from a coverity scan
Last modified: 2016-04-14 11:29:24 UTC
.
Created attachment 325489 [details] [review] registryd: Avoid crashing with a NULL keystring From a coverity check: 1. at-spi2-core-2.14.1/registryd/deviceeventcontroller-x11.c:1167: deref_ptr_in_call: Dereferencing pointer "keystring". 2. at-spi2-core-2.14.1/registryd/deviceeventcontroller-x11.c:1169: check_after_deref: Null-checking "keystring" suggests that it may be null, but it has already been dereferenced on all paths leading to the check. (keystring, -1, &c))) {
Created attachment 325490 [details] [review] atspi-event-listener: Plug a memory leak
Comment on attachment 325489 [details] [review] registryd: Avoid crashing with a NULL keystring pushed to master: bb8118
Comment on attachment 325490 [details] [review] atspi-event-listener: Plug a memory leak pushed to master: b30d42
Thanks for the patches. I've pushed to master and will include them for 2.20.1.
These appear to have been released in 2.20.1, but there's no 2.20.1 tag in git. Did you forget to push?
(In reply to Simon McVittie from comment #6) > These appear to have been released in 2.20.1, but there's no 2.20.1 tag in > git. Did you forget to push? APparently. Sorry about that. Pushed now.